--- a/gb/20/10/21/n12490486.md
+++ b/gb/20/10/21/n12490486.md
@@ -1,13 +1,13 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zguxvm3650/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/zguxvm3650/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/zguxvm3650/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zguxvm3650/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zguxvm3650/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zguxvm3650/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zguxvm3650/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zguxvm3650/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>加国亚太基金会民调：多数台湾人视港版国安法为威胁</h2>
 
 <h6></h6>
 <hr>
-<p>【大纪元2020年10月21日讯】（大纪元渥太华记者站报导）具官方色彩之“加拿大<ahref="https://github.com/zguxvm3650/djy/blob/master/gb/tag/%E4%BA%9A%E5%A4%AA%E5%9F%BA%E9%87%91%E4%BC%9A.md#1">亚太基金会</a>”(Asia Pacific Foundation of Canada) 罕见于10月1日发布题为“<ahref="https://github.com/zguxvm3650/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%85%B3%E4%BA%8E%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E5%8F%8A%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8%E6%B0%91%E6%84%8F.md#1">台湾关于外交政策及国家安全民意</a>”(Taiwanese Public Opinion on Foreign Policy and National Security)调查报告，针对1,088位台湾民众在8月间进行网路民调，以了解台湾人对香港版<ahref="https://github.com/zguxvm3650/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>、台湾国家安全、战略地位、外交政策、主要区域伙伴及对加拿大的看法。</p>
+<p>【大纪元2020年10月21日讯】（大纪元渥太华记者站报导）具官方色彩之“加拿大<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%9A%E5%A4%AA%E5%9F%BA%E9%87%91%E4%BC%9A.md#1">亚太基金会</a>”(Asia Pacific Foundation of Canada) 罕见于10月1日发布题为“<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E5%85%B3%E4%BA%8E%E5%A4%96%E4%BA%A4%E6%94%BF%E7%AD%96%E5%8F%8A%E5%9B%BD%E5%AE%B6%E5%AE%89%E5%85%A8%E6%B0%91%E6%84%8F.md#1">台湾关于外交政策及国家安全民意</a>”(Taiwanese Public Opinion on Foreign Policy and National Security)调查报告，针对1,088位台湾民众在8月间进行网路民调，以了解台湾人对香港版<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>、台湾国家安全、战略地位、外交政策、主要区域伙伴及对加拿大的看法。</p>
 <p>报告指出，2020年是台湾在全球舞台的分水岭，蔡英文政府有效应对COVID-19疫情，使台湾成为全球公认的公卫领导者，其灵敏的外交亦使台湾在全球地位飙升，支持台湾参与世界卫生组织等国际论坛的呼声正在增加。蔡总统提升了台湾在西方国家中的地位，美国及欧盟成员国均明确表达支持立场，如8月间川普政府卫生部长Alex Azar访台，是自1970年代以来访台最高美方官员，捷克参议院议长Milos Vystrcil也在台湾立法院表明“我是台湾人”，对多年来日益孤立的台湾而言，类此国家层级的支持实属罕见。由于美中对抗加剧及香港抗争引发政治动荡，使台湾作为西方国家企业在该地区的替代市场吸引更多关注。然并非所有事态发展均对台湾有利，中共以抗议及武力威胁回应西方国家对台湾渐增的支持，最引人注目者为Azar部长访台期间，中共军机越过台海中线。</p>
-<p>北京7月在香港施行的<ahref="https://github.com/zguxvm3650/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>亦使“一国两制”方案备受质疑。事态表明习近平政权对“台湾议题”的战略耐心正在磨损，台湾对中国外交政策的基础正在发生变化。尽管西方国家对台湾国际地位的支持日增，但台湾的国家政策及外交政策前景仍不确定。为掌握台湾民众对相关议题的看法，加拿大<ahref="https://github.com/zguxvm3650/djy/blob/master/gb/tag/%E4%BA%9A%E5%A4%AA%E5%9F%BA%E9%87%91%E4%BC%9A.md#1">亚太基金会</a>与RIWI民调机构合作进行该调查，主要结果如下：</p>
+<p>北京7月在香港施行的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%9B%BD%E5%AE%89%E6%B3%95.md#1">国安法</a>亦使“一国两制”方案备受质疑。事态表明习近平政权对“台湾议题”的战略耐心正在磨损，台湾对中国外交政策的基础正在发生变化。尽管西方国家对台湾国际地位的支持日增，但台湾的国家政策及外交政策前景仍不确定。为掌握台湾民众对相关议题的看法，加拿大<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BA%9A%E5%A4%AA%E5%9F%BA%E9%87%91%E4%BC%9A.md#1">亚太基金会</a>与RIWI民调机构合作进行该调查，主要结果如下：</p>
 <ul>
 <li>大多数台湾民众(66%)认为香港版国安法对台湾构成国安威胁，尤其值得关注;57%民众认为，香港版国安法的实施，显示中共国已违反“一国两制”的原则;</li>
 <li>政治上认同台湾或支持民进党者，认为在香港版国安法施行后，对台湾国家安全的关注，高于认同中国或支持国民党者，亦即政治认同倾向台湾者，高达75%担忧香港版国安法对台湾国安的影响，政治认同倾向中国者，仅38%表示担忧;支持民进党者有78%表示担忧，远高于支持国民党的42%;</li>
@@ -23,48 +23,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/15/11/5/n4566228.md#1">习马会 夏立言：八成民众支持对等会面</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/17/11/19/n9863710.md#1">总统府：台湾民调若有参考价值  都会注意</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/17/12/2/n9917060.md#1">颜丹：官媒高调报道台湾民调的背后</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/18/8/1/n10606048.md#1">总统民调声浪高 柯Ｐ：我又没说要选总统</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/19/5/28/n11285579.md#1">何清涟：台湾在“红色渗透”之下的焦虑感</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/19/7/7/n11369890.md#1">中共资金干预初选民调 台网媒董事长收贿</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/19/11/3/n11630249.md#1">中共威胁台湾国防安全 专家建议因应之道</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/20/10/19/n12485326.md#1">加拿大学者：中共战略野心和对全球威胁（二）</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/20/10/20/n12487781.md#1">加媒：当前是加拿大强化对台关系的契机</a></li>
-<li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/20/10/18/n12484920.md#1">加拿大学者：中共战略野心和对全球威胁（一）</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/11/5/n4566228.md#1">习马会 夏立言：八成民众支持对等会面</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/11/19/n9863710.md#1">总统府：台湾民调若有参考价值  都会注意</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/12/2/n9917060.md#1">颜丹：官媒高调报道台湾民调的背后</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/1/n10606048.md#1">总统民调声浪高 柯Ｐ：我又没说要选总统</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/5/28/n11285579.md#1">何清涟：台湾在“红色渗透”之下的焦虑感</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/7/7/n11369890.md#1">中共资金干预初选民调 台网媒董事长收贿</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/11/3/n11630249.md#1">中共威胁台湾国防安全 专家建议因应之道</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13679397.md#1">乌反抗俄入侵 专家：促中共重估攻台代价</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/11/n13640048.md#1">人权专家揭中共海外代理人对加拿大的种种渗透</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/11/n13639483.md#1">【渥太华3·11】全面回归正常生活</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/23/n11275879.md#1" target="_blank">林辉：中共对三千印度战俘进行红色洗脑</a></li><li><a href="https://github.com/zguxvm3650/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/25/n11213689.md#1" target="_blank">浪子回头金不换?却遭十年牢狱灾</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/7/n10698182.md#1" target="_blank">共产暴政录：中共在苏区杀人如麻</a></li><li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/19/5/20/n11267735.md#1" target="_blank">庆法轮大法日 以色列女画家感悟大法指引方向</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/14/n12474369.md#1">日本出现“UFO空战”画面 多个追赶一个</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/2/14/n11869946.md#1">大疫下解救有道 历史启示带您闯过中共肺炎</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/16/n12479879.md#1">曾预言川普当选 传教士：上帝派天使助连任</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/9/30/n12440550.md#1">《圣经》与《推背图》预言的应验与变换1</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/9/17/n12411954.md#1">东西方地狱见闻 邪淫者的悲声</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/20/n12487922.md#1">【十字路口】拜登父子贪腐叛国？7大疑问3聚焦</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/20/n12488476.md#1">【纽约调查】美禁共产党员移民 入籍多年也被追查</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/20/n12487958.md#1">【西岸观察】亨特电脑门曝中共惯用伎俩</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/18/n12483848.md#1">田云：电脑门发酵 拜登竞选经理自曝民调不实</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/18/n12484807.md#1">【役情最前线】王岐山命运难料 新林彪事件恐现</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/18/n12484808.md#1">哈萨克斯坦爆亨特?拜登丑闻 涉及克里女儿</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/18/n12484792.md#1">洪金宝拄拐杖近照曝光 网民惊讶</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/18/n12484953.md#1">章子怡产后首秀 发际线上移引热议</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/18/n12485042.md#1">陈坤准时为周迅庆生 连续11年从未中断</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/19/n12487392.md#1">被问是否担心粉丝流失 胡歌大气回应</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/19/n12487592.md#1">黄脸白发扮卖饼阿婆 朱茵被黄贯中一眼认出</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/6/n12455916.md#1">运动后吃对修复肌肉、改善疲劳 营养师推3食谱</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/19/n12487232.md#1">研究：中国猪只出现新病毒 未来恐传染给人</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/19/n12486194.md#1">美里根号航母打击群返回南海 缩时短片释出</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/18/n12484089.md#1">两大一小的白鲸搁浅 俄罗斯男子花7小时营救</a></li>
-<li><a href="https://github.com/jpmljf3654/djy/blob/master/gb/20/10/19/n12485655.md#1">全球15国民调：台湾人最希望川普当选</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688852.md#1">【新闻大家谈】美国2疏忽 中共借机叫板三角联盟</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688712.md#1">【马克时空】2023美军费超中共3倍 核武库全面现代化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685151.md#1">玄彬与孙艺真本日于首尔结婚 婚礼照笑容灿烂</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/26/n13674661.md#1">自制一碗降糖餐！十大降血糖食物一次看</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zguxvm3650/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zguxvm3650/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/21/n12490486.htm">加国亚太基金会民调：多数台湾人视港版国安法为威胁</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/10/21/n12490486.htm">加国亚太基金会民调：多数台湾人视港版国安法为威胁</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zguxvm3650/djy/blob/master/gb/20/10/21/n12490486.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zguxvm3650/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zguxvm3650/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zguxvm3650/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zguxvm3650/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zguxvm3650/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/10/21/n12490486.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
